--- a/Controller/src/main/resources/templates/fragment/__content_card.html
+++ b/Controller/src/main/resources/templates/fragment/__content_card.html
@@ -49,7 +49,7 @@
                 <span class="kht-text-color-express" th:text=${likes.get(content.getId())}>12</span>
                 &nbsp;
                 <img class="" src="/icon/comment.svg" style="width: 20px; height: 20px;" alt="">
-                <span class="kht-text-color-express">24</span>
+                <span class="kht-text-color-express" th:text=${cmts.get(content.getId())}>24</span>
             </sup>
         </div>
         <div>
